[MNG-4342] [regression] Multiple goals within single execution with equally named parameter get configured with wrong default values
o Added IT

git-svn-id: https://svn.apache.org/repos/asf/maven/core-integration-testing/trunk@812519 13f79535-47bb-0310-9956-ffa450edef68